--- a/functional-tests/public/index.html
+++ b/functional-tests/public/index.html
@@ -49,7 +49,8 @@
 <div id="response-test" class="test">
   defservices functions properly <br />
   able to send messages <br />
-  able to receive messages
+  able to receive messages <br />
+  able to add remove listener to sesion
 </div>
 </body>
 </html>
