Upgraded to the latest release of cometd and change the clojure version to 1.3.0

--- a/functional-tests/public/index.html
+++ b/functional-tests/public/index.html
@@ -22,7 +22,7 @@
 <script type="text/javascript" src="js/ReloadExtension.js"></script>
 <script type="text/javascript" src="js/TimeStampExtension.js"></script>
 <script type="text/javascript" src="js/TimeSyncExtension.js"></script>
-<script type="text/javascript" src="js/jquery-1.6.2.js"></script>
+<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
 <script type="text/javascript" src="js/json2.js"></script>
 <script type="text/javascript" src="js/jquery.cometd.js"></script>
 <script type="text/javascript" src="js/jquery.cometd-ack.js"></script>
@@ -30,18 +30,21 @@
 <script type="text/javascript" src="js/jquery.cometd-timestamp.js"></script>
 <script type="text/javascript" src="js/jquery.cometd-timesync.js"></script>
 <script type="text/javascript">
+$(function() {
   var connected = false;
-  $.cometd.init('http://localhost:9095/cometd');
+  $.cometd.websocketEnabled = true;
+  $.cometd.init(window.location + 'cometd');
   $.cometd.addListener('/meta/connect', function(message) {
     if (! connected) {
       $("#connected-test").addClass("success");
       connected = true;
-      $.cometd.publish('/my/channel', {hello: 'Word'});
-    }
-  });
   $.cometd.subscribe('/publish/test', function(message) {
     $('#response-test').addClass('success');
   });
+      $.cometd.publish('/my/channel', {hello: 'Word'});
+    }
+  });
+})
 </script>
 <div id="connected-test" class="test">
   Connected
@@ -50,7 +53,7 @@
   defservices functions properly <br />
   able to send messages <br />
   able to receive messages <br />
-  able to add remove listener to sesion
+  able to add remove listener to session
 </div>
 </body>
 </html>
